--- a/about_me/index.html
+++ b/about_me/index.html
@@ -9,8 +9,6 @@
       margin: 0;
       padding: 0;
       overflow-x: hidden;
-    }
-    body {
       background: linear-gradient(to right, #1f1f1f, #2c2c2c);
       color: #e0ffe0;
       font-family: 'JetBrains Mono', monospace;
@@ -164,7 +162,7 @@
         bootScreen.style.display = "none";
         nav.style.display = "flex";
         terminal.style.display = "block";
-        typeLine(); // ← make sure this says typeLine, not typeStory
+        typeLine();
       }, 300);
       return;
     }
