--- a/about_me/index.html
+++ b/about_me/index.html
@@ -131,7 +131,7 @@ function typeBootLine() {
       bootScreen.style.display = "none";
       nav.style.display = "flex";
       terminal.style.display = "block";
-      typeStory();
+      typeStory(); // <- FIX: this line now works
     }, 300);
     return;
   }
