--- a/about_me/index.html
+++ b/about_me/index.html
@@ -13,25 +13,8 @@
       color: #e0ffe0;
       font-family: 'JetBrains Mono', monospace;
     }
-    .nav {
-      display: none;
-      background: #ffffff;
-      color: #000;
-      padding: 15px 30px;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      font-weight: 600;
-    }
-    .nav a {
-      color: #000;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 1rem;
-    }
     .boot-screen {
       height: 100vh;
-      width: 100vw;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -72,14 +55,6 @@
   <div id="boot-lines"></div>
 </div>
 
-<div class="nav" id="navbar">
-  <a href="../index.html">Home</a>
-  <a href="../about_me/index.html">About Me</a>
-  <a href="../my_goals/index.html">My Goals</a>
-  <a href="../coursework/index.html">Coursework</a>
-  <a href="../personal_projects/index.html">Personal Projects</a>
-</div>
-
 <h2 class="glow">> whoami</h2>
 <div class="output" id="terminal"></div>
 
@@ -109,8 +84,6 @@ const storyLines = [
 ];
 
 const terminal = document.getElementById("terminal");
-const nav = document.getElementById("navbar");
-const bootScreen = document.getElementById("boot");
 const bootDiv = document.getElementById("boot-lines");
 
 const bootCursor = document.createElement("span");
@@ -128,10 +101,9 @@ let currentBootLine = null;
 function typeBootLine() {
   if (bootIndex >= bootLines.length) {
     setTimeout(() => {
-      bootScreen.style.display = "none";
-      nav.style.display = "flex";
+      document.getElementById("boot").style.display = "none";
       terminal.style.display = "block";
-      typeStory(); // <- FIX: this line now works
+      typeStory();
     }, 300);
     return;
   }
