--- a/about_me/terminal.html
+++ b/about_me/terminal.html
@@ -13,34 +13,53 @@
       color: #e0ffe0;
       height: 100%;
       overflow: hidden;
+      animation: flicker 0.1s infinite;
     }
 
-    .crt-background {
+    @keyframes flicker {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.98; }
+    }
+
+    .crt {
       position: fixed;
       width: 100vw;
       height: 100vh;
-      background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/77/TV_static.gif");
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/7/77/TV_static.gif');
       background-size: cover;
-      background-repeat: no-repeat;
-      opacity: 0.07;
+      opacity: 0.2;
+      z-index: -2;
+    }
+
+    .scanlines {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.1) 50%,
+        rgba(0, 0, 0, 0.2) 50%
+      );
+      background-size: 100% 4px;
+      pointer-events: none;
       z-index: -1;
     }
 
     .navbar {
-      width: 100%;
       background: white;
       color: black;
       padding: 12px 20px;
-      font-weight: bold;
       display: flex;
       justify-content: flex-start;
-      box-sizing: border-box;
+      gap: 20px;
+      font-weight: bold;
     }
 
     .navbar a {
       color: black;
       text-decoration: none;
-      margin-right: 20px;
     }
 
     #terminal {
@@ -49,6 +68,8 @@
       text-align: left;
       font-size: 1rem;
       line-height: 1.6;
+      overflow-y: auto;
+      height: calc(100vh - 100px);
     }
 
     .typing-line {
@@ -61,6 +82,7 @@
       height: 1em;
       background-color: #78ffd6;
       animation: blink 1s step-start infinite;
+      margin-left: 2px;
     }
 
     @keyframes blink {
@@ -78,98 +100,96 @@
   </style>
 </head>
 <body>
+  <div class="crt"></div>
+  <div class="scanlines"></div>
 
-<div class="crt-background"></div>
+  <div class="navbar">
+    <a href="/index.html">Home</a>
+    <a href="/about_me/index.html">About Me</a>
+    <a href="/my_goals/index.html">My Goals</a>
+    <a href="/coursework/index.html">Coursework</a>
+    <a href="/personal_projects/index.html">Personal Projects</a>
+  </div>
 
-<div class="navbar">
-  <a href="/index.html">Home</a>
-  <a href="/about_me/index.html">About Me</a>
-  <a href="/my_goals/index.html">My Goals</a>
-  <a href="/coursework/index.html">Coursework</a>
-  <a href="/personal_projects/index.html">Personal Projects</a>
-</div>
+  <div class="terminal" id="terminal">
+    <div class="interactive glow" onclick="startTyping()">&gt; whoami</div>
+  </div>
 
-<div class="terminal" id="terminal">
-  <div class="interactive glow" onclick="startTyping()">&gt; whoami</div>
-</div>
+  <script>
+    const terminal = document.getElementById("terminal");
+    const lines = [
+      "My name is Jesús Antonio López Aguilar.",
+      "Unlike my Hispanic communities coming to the US with a green card,",
+      "I came with citizenship, ads, taxes, and a paycheck stolen by Uncle Sam.",
+      "Born and raised in Salt Lake City, Utah, I was born into a Mexican immigrant family —",
+      "Miriam Aguilar and Sergio Lopez. My mom came from Córdoba, Veracruz.",
+      "She worked the fields at 17 and now she’s a sous chef at Little America Hotel.",
+      "My dad came from Zamora, Michoacán. Not construction — energy drinks.",
+      "Alani Nu? Yeah, he worked there. Unlimited supply? Yes. Was I allowed? No.",
+      "With my mom’s brains and my dad’s physical features,",
+      "you’ll never know what you’ll expect from me —",
+      "a furious 5ft Latina mom or a dad who grills chicken so good it shows him money.",
+      "",
+      "Fluent in Spanish? Yes.",
+      "But in America that meant translating everything since age 7:",
+      "mortgages, prescriptions, court docs, job apps, taxes.",
+      "I'm the personal assistant with trauma and a W2.",
+      "",
+      "I still have the same pencil from sophomore year.",
+      "It's limited edition from Japan. Ask to borrow it? Tazed.",
+      "Ask whose it is? 'Mio'. Say 'era'? You're getting deported from my desk.",
+      "",
+      "Bugs. Spiders. Wasps. Ladybugs. Everything but rats. Cute rats are fine.",
+      "But one spider? That TV remote is your life now.",
+      "",
+      "Sometimes I spiral.",
+      "Not because I'm taking a shot — because I stabbed my Capri Sun wrong.",
+      "Now I’m sticky, emotionally unstable, and everyone around me is chanting 'SALUDDD!'",
+      "",
+      "[DONE] Boot complete."
+    ];
 
-<script>
-  const terminal = document.getElementById("terminal");
+    let index = 0;
+    let isTyping = false;
+    let cursor;
 
-  const lines = [
-    "My name is Jesús Antonio López Aguilar.",
-    "Unlike my Hispanic communities coming to the US with a green card,",
-    "I came with citizenship, ads, taxes, and a paycheck stolen by Uncle Sam.",
-    "Born and raised in Salt Lake City, Utah, I was born into a Mexican immigrant family —",
-    "Miriam Aguilar and Sergio Lopez. My mom came from Córdoba, Veracruz.",
-    "She worked the fields at 17 and now she’s a sous chef at Little America Hotel.",
-    "My dad came from Zamora, Michoacán. Not construction — energy drinks.",
-    "Alani Nu? Yeah, he worked there. Unlimited supply? Yes. Was I allowed? No.",
-    "With my mom’s brains and my dad’s physical features,",
-    "you’ll never know what you’ll expect from me —",
-    "a furious 5ft Latina mom or a dad who grills chicken so good it shows him money.",
-    "",
-    "Fluent in Spanish? Yes.",
-    "But in America that meant translating everything since age 7:",
-    "mortgages, prescriptions, court docs, job apps, taxes.",
-    "I'm the personal assistant with trauma and a W2.",
-    "",
-    "I still have the same pencil from sophomore year.",
-    "It's limited edition from Japan. Ask to borrow it? Tazed.",
-    "Ask whose it is? 'Mio'. Say 'era'? You're getting deported from my desk.",
-    "",
-    "Bugs. Spiders. Wasps. Ladybugs. Everything but rats. Cute rats are fine.",
-    "But one spider? That TV remote is your life now.",
-    "",
-    "Sometimes I spiral.",
-    "Not because I'm taking a shot — because I stabbed my Capri Sun wrong.",
-    "Now I’m sticky, emotionally unstable, and everyone around me is chanting 'SALUDDD!'",
-    "",
-    "[DONE] Boot complete."
-  ];
+    function startTyping() {
+      if (isTyping) return;
+      isTyping = true;
 
-  let index = 0;
-  let isTyping = false;
-  let cursor;
+      const interactive = document.querySelector(".interactive");
+      if (interactive) interactive.remove();
 
-  function startTyping() {
-    if (isTyping) return;
-    isTyping = true;
+      cursor = document.createElement("span");
+      cursor.className = "cursor";
+      terminal.appendChild(cursor);
 
-    const interactive = document.querySelector(".interactive");
-    if (interactive) interactive.remove();
-
-    cursor = document.createElement("span");
-    cursor.className = "cursor";
-    terminal.appendChild(cursor);
-
-    typeNextLine();
-  }
-
-  function typeNextLine() {
-    if (index >= lines.length) return;
-
-    const line = document.createElement("div");
-    line.className = "typing-line";
-    terminal.insertBefore(line, cursor);
-
-    let charIndex = 0;
-    const text = lines[index];
-
-    function typeChar() {
-      if (charIndex <= text.length) {
-        line.textContent = text.slice(0, charIndex);
-        charIndex++;
-        setTimeout(typeChar, 15);
-      } else {
-        index++;
-        setTimeout(typeNextLine, 100);
-      }
+      typeNextLine();
     }
 
-    typeChar();
-  }
-</script>
+    function typeNextLine() {
+      if (index >= lines.length) return;
 
+      const line = document.createElement("div");
+      line.className = "typing-line";
+      terminal.insertBefore(line, cursor);
+
+      let charIndex = 0;
+      const text = lines[index];
+
+      function typeChar() {
+        if (charIndex <= text.length) {
+          line.textContent = text.slice(0, charIndex);
+          charIndex++;
+          setTimeout(typeChar, 15);
+        } else {
+          index++;
+          setTimeout(typeNextLine, 100);
+        }
+      }
+
+      typeChar();
+    }
+  </script>
 </body>
 </html>
