--- a/index.html
+++ b/index.html
@@ -8,41 +8,49 @@
 </head>
 <body>
 
-    <header class="hero">
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#goals">Goals</a></li>
+            <li><a href="#coursework">Coursework</a></li>
+            <li><a href="#beyond">Beyond the Classroom</a></li>
+        </ul>
+    </nav>
+
+    <!-- Sections -->
+    <header class="hero" id="home">
         <h1>Jesús Lopez Aguilar</h1>
         <p>Not a regular portfolio. A legally distinct experience.</p>
     </header>
 
-    <section class="about">
-        <h2>Who Am I?</h2>
-        <p>A slightly chaotic but deeply determined individual pursuing greatness (or at least an A+).</p>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Welcome to my world — a chaotic balance of ambition, sarcasm, and suspicious amounts of coffee.</p>
     </section>
 
-    <section class="projects">
-        <h2>Projects</h2>
+    <section id="goals">
+        <h2>Goals</h2>
+        <p>Short-term survival, long-term domination. (Academically, emotionally, and probably financially.)</p>
+    </section>
+
+    <section id="coursework">
+        <h2>Coursework</h2>
         <div class="project-list">
-            <div class="project-item">Project One Title</div>
-            <div class="project-item">Project Two Title</div>
-            <div class="project-item">Project Three Title</div>
+            <div class="project-item">American Institutions</div>
+            <div class="project-item">English Composition</div>
+            <div class="project-item">Biology (and barely survived)</div>
         </div>
     </section>
 
-    <section class="reflections">
-        <h2>Reflections</h2>
-        <blockquote>“If you think this is impressive, imagine me under pressure.”</blockquote>
-    </section>
-
-    <section class="honors">
-        <h2>Honors & Awards</h2>
-        <ul>
-            <li>SLCC Honors Program Member</li>
-            <li>Dean's List 2024</li>
-            <li>Other Cool Achievement Here</li>
-        </ul>
+    <section id="beyond">
+        <h2>Beyond the Classroom</h2>
+        <p>Turns out life happens outside of lectures, too. Here’s where I pretended to be social and succeeded.</p>
     </section>
 
     <footer>
-        <p>Built with caffeine, questionable life choices, and relentless Google searches. © 2025 Jesús Lopez Aguilar</p>
+        <p>Built with questionable life decisions and relentless tabs open. © 2025 Jesús Lopez Aguilar</p>
     </footer>
 
 </body>
