--- a/index.html
+++ b/index.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jesús Lopez Aguilar | EPortfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jesús Lopez Aguilar | Home</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="fade-in">
 
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#goals">Goals</a></li>
-            <li><a href="#coursework">Coursework</a></li>
-            <li><a href="#beyond">Beyond the Classroom</a></li>
-        </ul>
-    </nav>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="goals.html">Goals</a></li>
+      <li><a href="coursework.html">Coursework</a></li>
+      <li><a href="beyond.html">Beyond the Classroom</a></li>
+    </ul>
+  </nav>
 
-    <!-- Sections -->
-    <header class="hero" id="home">
-        <h1>Jesús Lopez Aguilar</h1>
-        <p>Not a regular portfolio. A legally distinct experience.</p>
-    </header>
+  <!-- Hero Section -->
+  <header class="hero">
+    <h1>Jesús Lopez Aguilar</h1>
+    <p>Welcome to my ePortfolio — polished chaos in dark mode.</p>
+  </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Welcome to my world — a chaotic balance of ambition, sarcasm, and suspicious amounts of coffee.</p>
-    </section>
+  <!-- College Logos Section -->
+  <section class="college-section">
+    <h3>My Current Colleges of Attendance</h3>
+    <div class="college-logos">
+      <div class="college-item">
+        <img src="joyce-logo.png" alt="Joyce University Logo" class="college-logo">
+        <p class="degree">Nursing Practice</p>
+      </div>
+      <div class="college-item">
+        <img src="slcc-logo.png" alt="SLCC Honors Logo" class="college-logo">
+        <p class="degree">Criminal Justice</p>
+      </div>
+    </div>
+  </section>
 
-    <section id="goals">
-        <h2>Goals</h2>
-        <p>Short-term survival, long-term domination. (Academically, emotionally, and probably financially.)</p>
-    </section>
+  <!-- Academic Path Section -->
+  <section class="academic-section">
+    <h2>Academic Path</h2>
+    <p>
+      Advancing Nursing Practice toward a Doctor of Nursing Practice (DNP) and Nurse Practitioner (NP) licensure, 
+      and advancing Criminal Justice through future specialization in Medical Forensics — combining healthcare expertise 
+      and forensic investigation to build a career in forensic medicine.
+    </p>
+  </section>
 
-    <section id="coursework">
-        <h2>Coursework</h2>
-        <div class="project-list">
-            <div class="project-item">American Institutions</div>
-            <div class="project-item">English Composition</div>
-            <div class="project-item">Biology (and barely survived)</div>
-        </div>
-    </section>
-
-    <section id="beyond">
-        <h2>Beyond the Classroom</h2>
-        <p>Turns out life happens outside of lectures, too. Here’s where I pretended to be social and succeeded.</p>
-    </section>
-
-    <footer>
-        <p>Built with questionable life decisions and relentless tabs open. © 2025 Jesús Lopez Aguilar</p>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Jesús Lopez Aguilar | Built with love, ambition, and a criminally good work ethic.</p>
+  </footer>
 
 </body>
 </html>
