--- a/index.html
+++ b/index.html
@@ -4,73 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jesús Lopez Aguilar | ePortfolio</title>
-  <style>
-    body {
-      background-color: #f9f9f9;
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    nav {
-      background-color: #ffffff;
-      padding: 20px 0;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 999;
-    }
-    nav h1 {
-      text-align: center;
-      margin: 0;
-      font-size: 2rem;
-      color: #222;
-    }
-    section.college-logos {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-top: 50px;
-      margin-bottom: 50px;
-      gap: 60px;
-      animation: fadeInUp 2s ease both;
-    }
-    .college-logo {
-      text-align: center;
-    }
-    .college-logo img {
-      width: 250px;
-      max-width: 90%;
-      height: auto;
-      object-fit: contain;
-      animation: fadeInUp 2s ease both;
-    }
-    .college-logo p {
-      margin-top: 15px;
-      font-size: 1.2rem;
-      font-weight: 500;
-      color: #333;
-    }
-    @keyframes fadeInUp {
-      0% {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    footer {
-      background-color: #ffffff;
-      padding: 20px;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #777;
-      margin-top: 80px;
-      box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
