--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
   <h1>Welcome to My ePortfolio</h1>
 </nav>
 
-<section class="college-logos">
-  <div class="college-logo">
-    <img src="slcc-logo.jpg" alt="SLCC Honors Program Logo">
-    <p>Salt Lake Community College Honors Program</p>
-  </div>
-  <div class="college-logo">
-    <img src="joyce-logo.png" alt="Joyce University Logo">
-    <p>Joyce University of Nursing & Health Sciences</p>
-  </div>
+<section class="content">
+  <h2>Hello and welcome.</h2>
+  <p>This is the beginning of something professional.</p>
 </section>
 
 <footer>
