--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <nav>
   <div class="nav-container">
-    <div class="logo">Jesús Lopez Aguilar</div>
     <div class="menu-icon" id="menu-icon">&#9776;</div>
     <ul id="nav-links">
       <li><a href="index.html">Home</a></li>
@@ -24,8 +23,10 @@
 
 <header class="hero">
   <div class="card">
-    <h1>Welcome to My ePortfolio</h1>
-    <p>Building a future with passion, creativity, and precision.</p>
+    <h1>Welcome to my General Education ePortfolio!</h1>
+    <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
+    <p>Here you’ll find my work, reflection, and life throughout my academic and personal journey.<br>
+    Including mental instability, and the tears my keyboard absorbed from coding this website from scratch.</p>
     <a href="about.html" class="button">Start Exploring</a>
   </div>
 </header>
