--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <nav>
   <div class="nav-container">
+    <div class="logo">Jesús Lopez Aguilar</div>
     <div class="menu-icon" id="menu-icon">&#9776;</div>
     <ul id="nav-links">
       <li><a href="index.html">Home</a></li>
