--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </header>
 
 <footer>
-  © 2025 Jesús Lopez Aguilar | All rights reserved
+  © 2025 Jesús Lopez Aguilar | All rights reserved (No they're not)
 </footer>
 
 <script>
@@ -42,6 +42,7 @@
 
   menuIcon.addEventListener('click', () => {
     navLinks.classList.toggle('active');
+    document.body.classList.toggle('dimmed');
   });
 </script>
 
