--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <nav>
   <div class="nav-container">
-    <div class="logo">Jesús Lopez Aguilar</div>
     <div class="menu-icon" id="menu-icon">&#9776;</div>
     <ul id="nav-links">
       <li><a href="index.html">Home</a></li>
@@ -33,7 +32,7 @@
 </header>
 
 <footer>
-  © 2025 Jesús Lopez Aguilar | All rights reserved (No they're not)
+  © 2025 Jesús Lopez Aguilar | All rights reserved
 </footer>
 
 <script>
