--- a/index.html
+++ b/index.html
@@ -21,15 +21,10 @@
   </div>
 </nav>
 
-<header class="hero">
-  <div class="card">
-    <h1>Welcome to my General Education ePortfolio!</h1>
-    <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
-    <p>Here you’ll find my work, reflection, and life throughout my academic and personal journey.<br>
-    Including mental instability, and the tears my keyboard absorbed from coding this website from scratch.</p>
-    <a href="about.html" class="button">Start Exploring</a>
-  </div>
-</header>
+<div class="name-center">
+  <h1>Welcome to my General Education ePortfolio!</h1>
+  <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
+</div>
 
 <footer>
   © 2025 Jesús Lopez Aguilar | All rights reserved
