--- a/index.html
+++ b/index.html
@@ -1,46 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jesús Lopez Aguilar | ePortfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My ePortfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-  <div class="nav-container">
-    <ul id="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="courses.html">Courses</a></li>
-      <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="projects.html">Outside/Personal Projects</a></li>
-    </ul>
-  </div>
-</nav>
+    <!-- Navbar -->
+    <nav>
+        <div class="nav-container">
+            <ul id="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#courses">Courses</a></li>
+                <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#projects">Outside/Personal Projects</a></li>
+            </ul>
+        </div>
+    </nav>
 
-<div class="name-center">
-  <h1>Welcome to my General Education ePortfolio!</h1>
-  <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
-  <p>Here you’ll find my work, reflection, and life throughout my academic and personal journey.<br> Including mental instability, and the tears my keyboard absorbed from coding this website from scratch.</p>
-  <a href="about.html" class="button">Start Exploring</a>
-</div>
+    <!-- Welcome Section -->
+    <section class="name-center">
+        <h1>Welcome to my General Education ePortfolio!</h1>
+        <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
+        <p>Here you'll find my work, reflection, and life throughout my academic and personal journey. Including mental instability, and the tears my keyboard absorbed from coding this website from scratch.</p>
+        <a href="#start" class="button">Start Exploring</a>
+    </section>
 
-<footer>
-  © 2025 Jesús Lopez Aguilar | All rights reserved
-</footer>
-
-<script>
-  const menuIcon = document.getElementById('menu-icon');
-  const navLinks = document.getElementById('nav-links');
-
-  menuIcon.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
-    document.body.classList.toggle('dimmed');
-  });
-</script>
+    <!-- Footer Section -->
+    <footer>
+        <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
+    </footer>
 
 </body>
 </html>
