--- a/index.html
+++ b/index.html
@@ -1,38 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My ePortfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Jesús Lopez Aguilar - ePortfolio</title>
+  <style>
+    /* General body and background setup */
+    body {
+      background-color: #1c1c1c;
+      font-family: 'Nunito', sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #f0f0f0;
+      overflow-x: hidden;
+    }
+
+    /* Navbar styles */
+    nav {
+      background-color: white;
+      padding: 5px 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+      width: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+    }
+
+    /* Navbar links container */
+    .nav-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+
+    /* Navbar links */
+    #nav-links {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+      font-family: 'Courier New', Courier, monospace;
+    }
+
+    #nav-links li {
+      display: inline-block;
+    }
+
+    #nav-links li a {
+      color: black;
+      text-decoration: none;
+      font-size: 1.1rem;
+      font-weight: 600;
+      transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
+    }
+
+    #nav-links li a:hover {
+      color: #00bcd4;
+      text-shadow: 0 0 8px #00bcd4;
+      transform: scale(1.1);
+    }
+
+    #nav-links li a:active {
+      color: #007c91;
+    }
+
+    /* Centering name and description */
+    .name-center {
+      min-height: 90vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      flex-direction: column;
+      background: #1c1c1c;
+      padding: 20px;
+      margin-top: 60px;
+      width: 100%;
+    }
+
+    .name-center h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    .name-center h2 {
+      font-size: 1.4rem;
+      color: #00bcd4;
+      margin-bottom: 20px;
+    }
+
+    .name-center p {
+      font-size: 1.1rem;
+      color: #f0f0f0;
+      margin-bottom: 30px;
+    }
+
+    .button {
+      background-color: #00bcd4;
+      color: #1f1f1f;
+      padding: 10px 25px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+
+    .button:hover {
+      background-color: #0097a7;
+      box-shadow: 0 0 10px #00bcd4;
+    }
+
+    /* Footer styles */
+    footer {
+      background-color: #2a2a2a;
+      padding: 20px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #aaa;
+      width: 100%;
+      position: relative;
+      bottom: 0;
+      margin: 0;
+    }
+
+    /* Mobile adjustments */
+    @media (max-width: 768px) {
+      #nav-links {
+        flex-direction: row;
+        gap: 15px;
+        padding: 10px 0;
+        display: flex;
+        width: 100%;
+        background-color: white;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+      }
+
+      #nav-links li a {
+        font-size: 1rem;
+      }
+
+      .menu-icon {
+        display: none;
+      }
+
+      .name-center h1 {
+        font-size: 2rem;
+      }
+
+      .name-center h2 {
+        font-size: 1.3rem;
+      }
+
+      .name-center p {
+        font-size: 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      #nav-links {
+        gap: 10px;
+        font-size: 1rem;
+      }
+
+      .name-center h1 {
+        font-size: 1.8rem;
+      }
+
+      .name-center p {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 </head>
+
 <body>
+  <nav>
+    <div class="nav-container">
+      <ul id="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Courses</a></li>
+        <li><a href="#">Achievements</a></li>
+        <li><a href="#">Outside/Personal Projects</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <!-- Navbar -->
-    <nav>
-        <div class="nav-container">
-            <ul id="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#courses">Courses</a></li>
-                <li><a href="#achievements">Achievements</a></li>
-                <li><a href="#projects">Outside/Personal Projects</a></li>
-            </ul>
-        </div>
-    </nav>
+  <div class="name-center">
+    <h1>Welcome to my General Education ePortfolio!</h1>
+    <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
+    <p>Here you'll find my work, reflection, and life throughout my academic and personal journey. Including mental
+      instability, and the tears my keyboard absorbed from coding this website from scratch</p>
+    <a href="#explore" class="button">Start Exploring</a>
+  </div>
 
-    <!-- Welcome Section -->
-    <section class="name-center">
-        <h1>Welcome to my General Education ePortfolio!</h1>
-        <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
-        <p>Here you'll find my work, reflection, and life throughout my academic and personal journey. Including mental instability, and the tears my keyboard absorbed from coding this website from scratch.</p>
-        <a href="#start" class="button">Start Exploring</a>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
-    </footer>
+  <footer>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
+  </footer>
 
 </body>
+
 </html>
