--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       justify-content: center;
       align-items: center;
       margin: 0;
+      box-sizing: border-box;
     }
 
     /* Navbar links container */
@@ -166,6 +167,7 @@
       }
     }
 
+    /* Extra small devices like phones in portrait mode */
     @media (max-width: 480px) {
       #nav-links {
         gap: 10px;
@@ -199,8 +201,7 @@
   <div class="name-center">
     <h1>Welcome to my General Education ePortfolio!</h1>
     <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
-    <p>Here you'll find my work, reflection, and life throughout my academic and personal journey. Including mental
-      instability, and the tears my keyboard absorbed from coding this website from scratch</p>
+    <p>Here you'll find my work, reflection, and life throughout my academic and personal journey. Including mental instability, and the tears my keyboard absorbed from coding this website from scratch.</p>
     <a href="#explore" class="button">Start Exploring</a>
   </div>
 
