--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
     /* Navbar styles */
     nav {
-      background-color: white;
-      padding: 5px 20px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+      background-color: #ffffff;
+      padding: 15px 0;
       width: 100%;
       position: fixed;
       top: 0;
@@ -31,8 +30,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 0;
-      box-sizing: border-box;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
 
     /* Navbar links container */
@@ -47,7 +45,7 @@
     #nav-links {
       list-style: none;
       display: flex;
-      gap: 20px;
+      gap: 30px;
       margin: 0;
       padding: 0;
       font-family: 'Courier New', Courier, monospace;
@@ -58,9 +56,9 @@
     }
 
     #nav-links li a {
-      color: black;
+      color: #1f1f1f;
       text-decoration: none;
-      font-size: 1.1rem;
+      font-size: 1.4rem;
       font-weight: 600;
       transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
     }
@@ -85,23 +83,23 @@
       flex-direction: column;
       background: #1c1c1c;
       padding: 20px;
-      margin-top: 60px;
+      margin-top: 70px;
       width: 100%;
     }
 
     .name-center h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin-bottom: 10px;
     }
 
     .name-center h2 {
-      font-size: 1.4rem;
+      font-size: 1.8rem;
       color: #00bcd4;
       margin-bottom: 20px;
     }
 
     .name-center p {
-      font-size: 1.1rem;
+      font-size: 1.4rem;
       color: #f0f0f0;
       margin-bottom: 30px;
     }
@@ -147,23 +145,19 @@
       }
 
       #nav-links li a {
-        font-size: 1rem;
-      }
-
-      .menu-icon {
-        display: none;
+        font-size: 1.2rem;
       }
 
       .name-center h1 {
-        font-size: 2rem;
+        font-size: 2.5rem;
       }
 
       .name-center h2 {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
       }
 
       .name-center p {
-        font-size: 1rem;
+        font-size: 1.2rem;
       }
     }
 
@@ -175,11 +169,11 @@
       }
 
       .name-center h1 {
-        font-size: 1.8rem;
+        font-size: 2rem;
       }
 
       .name-center p {
-        font-size: 0.9rem;
+        font-size: 1rem;
       }
     }
   </style>
