--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     /* Navbar styles */
     nav {
       background-color: #ffffff;
-      padding: 15px 0;
+      padding: 10px 0; /* Reduced padding */
       width: 100%;
       position: fixed;
       top: 0;
@@ -75,7 +75,7 @@
 
     /* Centering name and description */
     .name-center {
-      min-height: 90vh;
+      min-height: 70vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -83,23 +83,23 @@
       flex-direction: column;
       background: #1c1c1c;
       padding: 20px;
-      margin-top: 70px;
+      margin-top: 60px;
       width: 100%;
     }
 
     .name-center h1 {
-      font-size: 3rem;
+      font-size: 2.5rem; /* Reduced header size */
       margin-bottom: 10px;
     }
 
     .name-center h2 {
-      font-size: 1.8rem;
+      font-size: 1.5rem; /* Reduced sub-header size */
       color: #00bcd4;
       margin-bottom: 20px;
     }
 
     .name-center p {
-      font-size: 1.4rem;
+      font-size: 1.2rem; /* Reduced paragraph size */
       color: #f0f0f0;
       margin-bottom: 30px;
     }
@@ -122,7 +122,7 @@
     /* Footer styles */
     footer {
       background-color: #2a2a2a;
-      padding: 20px;
+      padding: 15px; /* Reduced footer padding */
       text-align: center;
       font-size: 0.9rem;
       color: #aaa;
