--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jesús Lopez Aguilar - ePortfolio</title>
   <style>
-    /* General body and background setup */
+    /* Resetting margin and padding */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       background-color: #1c1c1c;
       font-family: 'Nunito', sans-serif;
-      margin: 0;
-      padding: 0;
       color: #f0f0f0;
-      overflow-x: hidden;
+      overflow-x: hidden; /* Prevent horizontal scroll */
     }
 
-    /* Navbar styles */
+    /* Navbar */
     nav {
-      background-color: #ffffff;
-      padding: 10px 0; /* Reduced padding */
+      background-color: white;
+      padding: 10px 0;
       width: 100%;
       position: fixed;
       top: 0;
@@ -30,25 +34,22 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
     }
 
-    /* Navbar links container */
     .nav-container {
+      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 100%;
     }
 
-    /* Navbar links */
     #nav-links {
       list-style: none;
       display: flex;
-      gap: 30px;
+      gap: 20px;
       margin: 0;
       padding: 0;
-      font-family: 'Courier New', Courier, monospace;
     }
 
     #nav-links li {
@@ -56,10 +57,11 @@
     }
 
     #nav-links li a {
-      color: #1f1f1f;
+      color: black;
       text-decoration: none;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       font-weight: 600;
+      padding: 8px 15px;
       transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
     }
 
@@ -73,9 +75,9 @@
       color: #007c91;
     }
 
-    /* Centering name and description */
+    /* Main content (Centering the welcome text) */
     .name-center {
-      min-height: 70vh;
+      min-height: 90vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -83,23 +85,22 @@
       flex-direction: column;
       background: #1c1c1c;
       padding: 20px;
-      margin-top: 60px;
-      width: 100%;
+      margin-top: 70px; /* Offset navbar */
     }
 
     .name-center h1 {
-      font-size: 2.5rem; /* Reduced header size */
+      font-size: 3rem;
       margin-bottom: 10px;
     }
 
     .name-center h2 {
-      font-size: 1.5rem; /* Reduced sub-header size */
+      font-size: 1.6rem;
       color: #00bcd4;
       margin-bottom: 20px;
     }
 
     .name-center p {
-      font-size: 1.2rem; /* Reduced paragraph size */
+      font-size: 1.4rem;
       color: #f0f0f0;
       margin-bottom: 30px;
     }
@@ -119,10 +120,10 @@
       box-shadow: 0 0 10px #00bcd4;
     }
 
-    /* Footer styles */
+    /* Footer */
     footer {
       background-color: #2a2a2a;
-      padding: 15px; /* Reduced footer padding */
+      padding: 15px;
       text-align: center;
       font-size: 0.9rem;
       color: #aaa;
@@ -132,7 +133,7 @@
       margin: 0;
     }
 
-    /* Mobile adjustments */
+    /* Mobile Adjustments */
     @media (max-width: 768px) {
       #nav-links {
         flex-direction: row;
@@ -140,12 +141,10 @@
         padding: 10px 0;
         display: flex;
         width: 100%;
-        background-color: white;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
       }
 
       #nav-links li a {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
       }
 
       .name-center h1 {
@@ -153,7 +152,7 @@
       }
 
       .name-center h2 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
       }
 
       .name-center p {
