--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       background-color: #1c1c1c;
       font-family: 'Nunito', sans-serif;
       color: #f0f0f0;
-      overflow-x: hidden; /* Prevent horizontal scroll */
+      overflow-x: hidden;
     }
 
     /* Navbar */
     nav {
       background-color: white;
-      padding: 10px 0;
+      padding: 5px 0;
       width: 100%;
       position: fixed;
       top: 0;
@@ -59,7 +59,7 @@
     #nav-links li a {
       color: black;
       text-decoration: none;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: 600;
       padding: 8px 15px;
       transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
@@ -75,7 +75,7 @@
       color: #007c91;
     }
 
-    /* Main content (Centering the welcome text) */
+    /* Main content */
     .name-center {
       min-height: 90vh;
       display: flex;
@@ -85,22 +85,22 @@
       flex-direction: column;
       background: #1c1c1c;
       padding: 20px;
-      margin-top: 70px; /* Offset navbar */
+      margin-top: 70px;
     }
 
     .name-center h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       margin-bottom: 10px;
     }
 
     .name-center h2 {
-      font-size: 1.6rem;
+      font-size: 1.2rem;
       color: #00bcd4;
       margin-bottom: 20px;
     }
 
     .name-center p {
-      font-size: 1.4rem;
+      font-size: 1rem;
       color: #f0f0f0;
       margin-bottom: 30px;
     }
@@ -144,26 +144,6 @@
       }
 
       #nav-links li a {
-        font-size: 1.1rem;
-      }
-
-      .name-center h1 {
-        font-size: 2.5rem;
-      }
-
-      .name-center h2 {
-        font-size: 1.4rem;
-      }
-
-      .name-center p {
-        font-size: 1.2rem;
-      }
-    }
-
-    /* Extra small devices like phones in portrait mode */
-    @media (max-width: 480px) {
-      #nav-links {
-        gap: 10px;
         font-size: 1rem;
       }
 
@@ -171,8 +151,27 @@
         font-size: 2rem;
       }
 
+      .name-center h2 {
+        font-size: 1rem;
+      }
+
       .name-center p {
         font-size: 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      #nav-links {
+        gap: 10px;
+        font-size: 1rem;
+      }
+
+      .name-center h1 {
+        font-size: 1.8rem;
+      }
+
+      .name-center p {
+        font-size: 0.9rem;
       }
     }
   </style>
