--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jesús Lopez Aguilar - ePortfolio</title>
   <style>
-    /* Resetting margin and padding */
     * {
       margin: 0;
       padding: 0;
@@ -18,6 +17,7 @@
       font-family: 'Nunito', sans-serif;
       color: #f0f0f0;
       overflow-x: hidden;
+      transition: background-color 0.3s ease;
     }
 
     /* Navbar */
@@ -34,6 +34,7 @@
       justify-content: space-between;
       align-items: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+      transition: padding 0.3s ease;
     }
 
     /* Links for desktop and mobile */
@@ -43,6 +44,7 @@
       gap: 20px;
       margin: 0;
       padding: 0;
+      transition: opacity 0.3s ease;
     }
 
     #nav-links li {
@@ -69,6 +71,7 @@
       display: none;
       flex-direction: column;
       cursor: pointer;
+      transition: transform 0.3s ease;
     }
 
     .hamburger-menu div {
@@ -93,6 +96,9 @@
       align-items: center;
       gap: 30px;
       padding: 10px 0;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.5s ease, visibility 0.5s ease;
     }
 
     .mobile-nav a {
@@ -100,12 +106,26 @@
       font-size: 1.5rem;
       font-weight: 600;
       text-decoration: none;
+      opacity: 0;
+      transition: opacity 0.5s ease;
     }
 
     .mobile-nav a:hover {
       color: #00bcd4;
       text-shadow: 0 0 8px #00bcd4;
       transform: scale(1.1);
+    }
+
+    /* Show mobile nav when active */
+    .mobile-nav.active {
+      display: flex;
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .mobile-nav.active a {
+      opacity: 1;
+      transition-delay: 0.2s;
     }
 
     /* Hide mobile nav and hamburger on desktop */
@@ -132,6 +152,7 @@
       background: #1c1c1c;
       padding: 20px;
       margin-top: 70px;
+      transition: padding 0.3s ease;
     }
 
     .name-center h1 {
@@ -257,7 +278,7 @@
     // Function to toggle the mobile menu
     function toggleMenu() {
       const mobileNav = document.getElementById('mobile-nav');
-      mobileNav.style.display = mobileNav.style.display === 'flex' ? 'none' : 'flex';
+      mobileNav.classList.toggle('active');
     }
   </script>
 </body>
