--- a/index.html
+++ b/index.html
@@ -31,20 +31,19 @@
       right: 0;
       z-index: 1000;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
       transition: padding 0.3s ease;
     }
 
-    /* Links for desktop and mobile */
     #nav-links {
       list-style: none;
       display: flex;
-      gap: 20px;
+      gap: 30px;
       margin: 0;
       padding: 0;
-      transition: opacity 0.3s ease;
+      justify-content: center;
     }
 
     #nav-links li {
@@ -54,7 +53,7 @@
     #nav-links li a {
       color: black;
       text-decoration: none;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: 600;
       padding: 8px 15px;
       transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
@@ -98,7 +97,7 @@
       padding: 10px 0;
       opacity: 0;
       visibility: hidden;
-      transition: top 0.5s ease, opacity 0.5s ease, visibility 0.5s ease;
+      transition: top 0.7s ease, opacity 0.7s ease, visibility 0.7s ease;
     }
 
     .mobile-nav a {
@@ -107,7 +106,7 @@
       font-weight: 600;
       text-decoration: none;
       opacity: 0;
-      transition: opacity 0.5s ease;
+      transition: opacity 0.7s ease;
     }
 
     .mobile-nav a:hover {
@@ -152,7 +151,6 @@
       background: #1c1c1c;
       padding: 20px;
       margin-top: 70px;
-      transition: padding 0.3s ease;
     }
 
     .name-center h1 {
@@ -271,7 +269,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Jesús Lopez Aguilar | All rights reserved (No they're not)</p>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
   </footer>
 
   <script>
