--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     #nav-links {
       list-style: none;
       display: flex;
-      gap: 30px;
+      gap: 20px;
       margin: 0;
       padding: 0;
       justify-content: center;
@@ -87,7 +87,7 @@
       position: absolute;
       top: -100%;
       right: 0;
-      background-color: white;
+      background-color: rgba(0, 0, 0, 0.8); /* Transparent background */
       width: 100%;
       height: 100vh;
       flex-direction: column;
@@ -97,11 +97,11 @@
       padding: 10px 0;
       opacity: 0;
       visibility: hidden;
-      transition: top 0.7s ease, opacity 0.7s ease, visibility 0.7s ease;
+      transition: top 0.7s ease-out, opacity 0.7s ease, visibility 0.7s ease;
     }
 
     .mobile-nav a {
-      color: black;
+      color: white;
       font-size: 1.5rem;
       font-weight: 600;
       text-decoration: none;
