--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -261,9 +262,9 @@
 
   <!-- Main Content -->
   <div class="name-center">
-    <h1>Welcome to my General Education ePortfolio!</h1>
-    <h2>Made by: Jesús Lopez Aguilar and my 7 other personalities</h2>
-    <p>Here you'll find my work, reflection, and life throughout my academic and personal journey. Including mental instability, and the tears my keyboard absorbed from coding this website from scratch.</p>
+    <h1>Crafted by: Jesús Lopez Aguilar and his 7 other mood swings.</h1>
+    <h2>Here you'll find my work, reflection, and life throughout my academic and personal journey.</h2>
+    <p>This will reflect the work I crafted from scratch, so if there’s an error... don’t tell me, I’ll go insane.</p>
     <a href="#explore" class="button">Start Exploring</a>
   </div>
 
