--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved (No they're not)</p>
   </footer>
 
   <script>
