--- a/index.html
+++ b/index.html
@@ -262,15 +262,16 @@
 
   <!-- Main Content -->
   <div class="name-center">
-    <h1>Crafted by: Jesús Lopez Aguilar and his 7 other mood swings.</h1>
-    <h2>Here you'll find my work, reflection, and life throughout my academic and personal journey.</h2>
+    <h1>Welcome to my SLCC ePortfolio: General Education!</h1>
+    <h2>Crafted by: Jesús Lopez Aguilar and his 7 other mood swings.</h2>
+    <p>Here you’ll find my work, reflection, and life throughout my academic and personal journey.</p>
     <p>This will reflect the work I crafted from scratch, so if there’s an error... don’t tell me, I’ll go insane.</p>
     <a href="#explore" class="button">Start Exploring</a>
   </div>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Jesús Lopez Aguilar | All rights reserved (No they're not)</p>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved (no theyre not)</p>
   </footer>
 
   <script>
