--- a/before-we-begin.html
+++ b/before-we-begin.html
@@ -35,6 +35,7 @@
       justify-content: center;
       align-items: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+      transition: padding 0.3s ease;
     }
 
     #nav-links {
@@ -70,6 +71,7 @@
       display: none;
       flex-direction: column;
       cursor: pointer;
+      transition: transform 0.3s ease;
     }
 
     .hamburger-menu div {
@@ -77,6 +79,7 @@
       height: 3px;
       margin: 5px;
       background-color: #000;
+      transition: transform 0.3s ease;
     }
 
     /* Mobile menu - hidden by default */
